bug fix 2353

Mesh object with hooks, which was used as duplivertor, didn't render the
duplicated objects on correct locations.
It did show OK in 3d window though, was due to not synced drawing and
render convertor code.