source/blender/renderconverter/intern/convertBlenderScene.c
@@ -2950,14 +2950,31 @@ void RE_rotateBlenderScene(void)
 
 	base= G.scene->base.first;
 	while(base) {
-		clear_object_constraint_status(base->object);
-		if (base->object->type==OB_ARMATURE) {
-			where_is_armature (base->object);
-		}
+		ob= base->object;
+		clear_object_constraint_status(ob);
+		if (ob->type==OB_ARMATURE) 
+			where_is_armature (ob);
 		else
+			where_is_object(ob);
 
-		where_is_object(base->object);
-
+		if(ob->type==OB_MESH) {
+			Mesh *me= ob->data;
+			/* check for need for displist (it's zero when parent, key, or hook changed) */
+			/* this part was added to mimic drawing code better, will be solved with dep graph! (ton) */
+			if(ob->disp.first==NULL) {
+				if(ob->parent && ob->partype==PARSKEL) makeDispList(ob);
+				else if(ob->parent && ob->parent->type==OB_LATTICE) makeDispList(ob);
+				else if(ob->hooks.first) makeDispList(ob);
+				else if(ob->softflag & 0x01) makeDispList(ob);
+				else if(me->disp.first==NULL && mesh_uses_displist(me)) makeDispList(ob);
+				else if(ob->effect.first) {	// as last check
+					Effect *eff= ob->effect.first;
+					if(eff->type==EFF_WAVE) makeDispList(ob);
+				}
+			}
+		}
+		
+		
 		if(base->next==0 && G.scene->set && base==G.scene->base.last) base= G.scene->set->base.first;
 		else base= base->next;
 	}
